--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -387,18 +387,22 @@ Commands.NoConsole=Denne kommando er ikke supported af konsollen.
 Commands.Other=[[GREEN]]--ANDRE KOMMANDOER--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
+Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- Accepter gruppe invitation
 Commands.Party.Chat.Off=Gruppe Chat kun [[RED]]Slukket
 Commands.Party.Chat.On=Kun Gruppe Chat [[GREEN]]Rigtigt
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--GRUPPE KOMMANDOER--
 Commands.Party.Invite.0=[[RED]]INFORMATION: [[GREEN]]Du har modtaget en gruppe invitation for {0} from {1}
-Commands.Party.Invite.1=[[YELLOW]]Skrive [[GREEN]]/party accept[[YELLOW]] for at acceptere invitation
-Commands.Party.Invite=[[RED]]- Send gruppe invitation
-Commands.Party.Join=[[GRAY]]Joinede Gruppen: {0}
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
+Commands.Party.Invite=[[RED]]- Send party invite
+Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Du er blevet fjernet fra gruppen {0}!
 Commands.Party.Leave=[[RED]]Du har forladt denne gruppe
@@ -413,7 +417,7 @@ Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
@@ -454,8 +458,8 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party pass
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]] er nu med i din gruppe
-Party.InformedOnQuit={0} [[GREEN]] har forladt din gruppe
+Party.InformedOnJoin={0} [[GREEN]]has joined your party
+Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Dette er ikke et gruppe navn.
 Party.IsLocked=[[RED]]Denne gruppe er allerede l\u00e5st!
@@ -466,23 +470,30 @@ Party.NotOwner=[[DARK_RED]]Du er ikke gruppe lederen.
 Party.Owner.New=[[GREEN]]{0} er den nye gruppe leder.
 Party.Owner.NotLeader=[[DARK_RED]]Du er ikke l\u00e6ngere gruppens leder.
 Party.Owner.Player=[[GREEN]]Du er nu gruppe lederen.
+Party.Password.None=[[RED]]This party is password protected.
 Party.Password.Incorrect=[[RED]]Gruppe kodeord er forkert.
-Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Set=[[GREEN]]Gruppe adgangskode sat til {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Dette er ikke en rigtig spiller.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Du kan ikke teleportere til en d\u00f8d spiller.
-Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Hurt=[[RED]]Du er blevet skadet infenfor de sidste {0} sekunder og kan ikke teleportere.
 Party.Teleport.Player=[[GREEN]]Du har teleporteret til {0}.
 Party.Teleport.Self=[[RED]]Du kan ikke teleportere dig selv!
 Party.Teleport.Target=[[GREEN]]{0} har teleporteret til dig.
-Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
+Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
+Party.Join.Self=[[RED]]You can\'t join to yourself!
 Party.Unlocked=[[GRAY]]Gruppe er \u00e5ben
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=ITEM
+Party.ShareMode.NoShare=NONE
+Party.ShareMode.Equal=EQUAL
+Party.ShareMode.Random=RANDOM
 Commands.XPGain.Acrobatics=Falder
 Commands.XPGain.Archery=Angriber Monstre
 Commands.XPGain.Axes=Angriver Monstre
@@ -560,7 +571,7 @@ Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du har stj\u00e5let [[BLUE
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] var ikke i stand til at stj\u00e6le viden fra dig!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] har stj\u00e5let [[BLUE]]{1}[[DARK_RED]] levels fra dig!
 Spout.Donate=[[YELLOW]][mcMMO] Doner!
-Spout.LevelUp.1=[[GREEN]]Level Op!
+Spout.LevelUp.1=[[GREEN]Level Op!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Tryk p\u00e5 ESCAPE for at forlade!
 Spout.Menu.ExitButton=UDGANG
