--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -387,33 +387,37 @@ Commands.NoConsole=Deze commando wordt niet ondersteund vanuit de console.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
+Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]Jij hebt een groep uitnodiging ontvangen voor {0} van {1}
-Commands.Party.Invite.1=[[YELLOW]]Typ [[GREEN]]/party accept[[YELLOW]] om de uitnodiging te accepteren
-Commands.Party.Invite=[[RED]]- Stuur een groep uitnodiging
-Commands.Party.Join=[[GRAY]]Groep betreden: {0}
-Commands.Party.Create=[[GRAY]]Groep aangemaakt: {0}
-Commands.Party.Rename=[[GRAY]]Groep naam veranderd naar: [[WHITE]]{0}
-Commands.Party.AlreadyExists=[[DARK_RED]]Groep {0} bestaat al!
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
+Commands.Party.Invite=[[RED]]- Send party invite
+Commands.Party.Join=[[GRAY]]Joined Party: {0}
+Commands.Party.Create=[[GRAY]]Created Party: {0}
+Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
+Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Je bent verwijderd uit de groep {0}!
 Commands.Party.Leave=[[RED]]Je hebt de groep verlaten
-Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]LEDEN[[RED]][]-----
+Commands.Party.Members.Header=[[RED]]-----[][[GREEN]]MEMBERS[[RED]][]-----
 Commands.Party.Members={0}
 Commands.Party.None=[[RED]]Je bent niet in een groep.
 Commands.Party.Quit=[[RED]]- Leave your current party
-Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
-Commands.Party.Toggle=[[RED]]- Toggle Party Chat
+Commands.Party.Teleport=<player> [[RED]]- Teleport naar een groepslid
+Commands.Party.Toggle=[[RED]]- Zet Party Chat aan/uit
 Commands.Party1=[[RED]]- Create a new party
 Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
@@ -434,11 +438,11 @@ Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
 Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
 Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
 Commands.Usage.Level=level
-Commands.Usage.Message=bericht
-Commands.Usage.Page=pagina
-Commands.Usage.PartyName=groep-naam
-Commands.Usage.Password=wachtwoord
-Commands.Usage.Player=speler
+Commands.Usage.Message=message
+Commands.Usage.Page=page
+Commands.Usage.PartyName=groeps-naam
+Commands.Usage.Password=password
+Commands.Usage.Player=player
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]You have no invites at this time
@@ -454,35 +458,42 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party pass
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]] is tot je groep toegetreden
-Party.InformedOnQuit={0} [[GREEN]] heeft je groep verlaten
-Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]heeft de groeps naam veranderd naar [[WHITE]]{1}
+Party.InformedOnJoin={0} [[GREEN]]has joined your party
+Party.InformedOnQuit={0} [[GREEN]]has left your party
+Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
-Party.IsLocked=[[RED]]This party is already locked!
-Party.IsntLocked=[[RED]]This party is not locked!
-Party.Locked=[[RED]]Groep is gesloten, alleen groepsleider kan uitnodigen.
+Party.IsLocked=[[RED]]Deze groep is al gesloten!
+Party.IsntLocked=[[RED]]Deze groep is niet gesloten!
+Party.Locked=[[RED]]De groep is gesloten, alleen de groepsleider kan spelers uitnodigen.
 Party.NotInYourParty=[[DARK_RED]]{0} zit niet in jou groep
-Party.NotOwner=[[DARK_RED]]You are not the party leader.
-Party.Owner.New=[[GREEN]]{0} is the new party leader.
-Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
-Party.Owner.Player=[[GREEN]]You are now the party leader.
-Party.Password.Incorrect=[[RED]]Groeps wachtwoord is incorrect.
+Party.NotOwner=[[DARK_RED]]Jij bent niet de groepsleider.
+Party.Owner.New=[[GREEN]]{0} is de nieuwe groep leider.
+Party.Owner.NotLeader=[[DARK_RED]]Jij bent niet meer de groepsleider.
+Party.Owner.Player=[[GREEN]]Jij bent nu de groep eigenaar.
+Party.Password.None=[[RED]]This party is password protected.
+Party.Password.Incorrect=[[RED]]Groeps- wachtwoord is incorrect.
 Party.Password.Set=[[GREEN]]Groep wachtwoord veranderd in {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
-Party.Player.Invalid=[[RED]]Dat is geen geldige speler.
-Party.NotOnline=[[DARK_RED]]{0} is niet online!
-Party.Player.InSameParty=[[RED]]{0} zit al in je groep!
-Party.PlayerNotInParty=[[DARK_RED]]{0} zit niet in een groep.
+Party.Player.Invalid=[[RED]]That is not a valid player.
+Party.NotOnline=[[DARK_RED]]{0} is not online!
+Party.Player.InSameParty=[[RED]]{0} already is in your party!
+Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
-Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} is naar jou toe gedeporteerd.
-Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
-Party.Unlocked=[[GRAY]]groep is ontgrendeld
-Party.Disband=[[GRAY]]De groep was opgeheven
-Party.Status.Locked=[[DARK_RED]](OP-UITNODIGING)
+Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
+Party.Join.Self=[[RED]]You can\'t join to yourself!
+Party.Unlocked=[[GRAY]]Groep is ontgrendeld
+Party.Disband=[[GRAY]]The party has been disbanded
+Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=ITEM
+Party.ShareMode.NoShare=NONE
+Party.ShareMode.Equal=EQUAL
+Party.ShareMode.Random=RANDOM
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Monsters aanvallen
