--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -11,7 +11,7 @@ Acrobatics.Listener=Acrobatics:
 Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
-Acrobatics.SkillName=ACROBATICS
+Acrobatics.SkillName=ACROBACIA
 Acrobatics.Skillup=[[YELLOW]]Acrobatics skill increased by {0}. Total ({1})
 Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
 Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
@@ -130,7 +130,7 @@ Mining.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (BIGGER BOMBS)
 Mining.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (DEMOLITIONS EXPERTISE)
 Mining.Ability.Lower=[[GRAY]]**YOU LOWER YOUR PICKAXE**
-Mining.Ability.Ready=[[GREEN]]**YOU READY YOUR PICKAXE**
+Mining.Ability.Ready=[[VERDE]]**VOC\u00ca PREPARA A SUA PICARETA**
 Mining.Effect.0=Super Breaker (ABILITY)
 Mining.Effect.1=Speed+, Triple Drop Chance
 Mining.Effect.2=Double Drops
@@ -150,7 +150,7 @@ Mining.Skills.SuperBreaker.On=[[GREEN]]**SUPER BREAKER ACTIVATED**
 Mining.Skills.SuperBreaker.Other.Off=[[RED]]Super Breaker[[GREEN]] has worn off for [[YELLOW]]{0}
 Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Super Breaker!
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Super Breaker [[GREEN]]ability is refreshed!
-Mining.Skillup=[[YELLOW]]Mining skill increased by {0}. Total ({1})
+Mining.Skillup=[[AMARELO]]Capacidade de Minar aumentada em {0}. Total ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
 Mining.Blast.Effect.0=+35% ore yield
 Mining.Blast.Effect.1=+40% ore yield
@@ -206,7 +206,7 @@ Repair.Skillup=[[YELLOW]]Repair skill increased by {0}. Total ({1})
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
 Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Arcane power has decreased for this item.
-Repair.Arcane.Fail=[[RED]]Arcane power has permanently left the item.
+Repair.Arcane.Fail=[[VERMELHO]]Poder misterioso saiu permanentemente do item.
 Repair.Arcane.Lost=[[RED]]You were not skilled enough to keep any enchantments.
 Repair.Arcane.Perfect=[[GREEN]]You have sustained the arcane energies in this item.
 Repair.Arcane.Rank=[[RED]]Arcane Forging: [[YELLOW]]Rank {0}/4
@@ -331,7 +331,7 @@ Woodcutting.Skills.TreeFellerThreshold=[[RED]]That tree is too large!
 Woodcutting.Skillup=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
-Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
+Ability.Generic.Template=[[VERMELHO]]{0}:[[AMARELO]]{1}
 Combat.ArrowDeflect=[[WHITE]]*DESVIOU A FLECHA*
 Combat.BeastLore=[[GREEN]]*CONHECIMENTO DE FERAS*
 Combat.BeastLoreHealth=[[DARK_AQUA]]Health ([[GREEN]]{0}[[DARK_AQUA]]/{1})
@@ -387,7 +387,10 @@ Commands.NoConsole=This command does not support console usage.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
+Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
@@ -399,6 +402,7 @@ Commands.Party.Invite=[[RED]]- Send party invite
 Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]You were kicked from party {0}!
 Commands.Party.Leave=[[RED]]You have left that party
@@ -413,7 +417,7 @@ Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
@@ -454,8 +458,8 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party pass
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]] entrou na equipe
-Party.InformedOnQuit={0} [[GREEN]] saiu da equipe
+Party.InformedOnJoin={0} [[GREEN]]has joined your party
+Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
@@ -466,6 +470,7 @@ Party.NotOwner=[[DARK_RED]]You are not the party leader.
 Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.None=[[RED]]This party is password protected.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.Password.Set=[[GREEN]]Senha da equipe: {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
@@ -474,22 +479,28 @@ Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
-Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
-Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
+Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
+Party.Join.Self=[[RED]]You can\'t join to yourself!
 Party.Unlocked=[[GRAY]]Equipe foi Destrancada
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=ITEM
+Party.ShareMode.NoShare=NONE
+Party.ShareMode.Equal=EQUAL
+Party.ShareMode.Random=RANDOM
 Commands.XPGain.Acrobatics=Falling
 Commands.XPGain.Archery=Attacking Monsters
 Commands.XPGain.Axes=Attacking Monsters
 Commands.XPGain.Excavation=Digging and finding treasures
 Commands.XPGain.Fishing=Fishing (Go figure!)
 Commands.XPGain.Herbalism=Harvesting Herbs
-Commands.XPGain.Mining=Mining Stone & Ore
+Commands.XPGain.Mining=Minar Pedra & Min\u00e9rio
 Commands.XPGain.Repair=Repairing
 Commands.XPGain.Swords=Attacking Monsters
 Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
@@ -539,7 +550,7 @@ Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Voc\u00ea precisa de mais
 Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Voc\u00ea est\u00e1 cansado pra usar essa habilidade.
-Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
+Stats.Header.Combat=[[DOURADO]]-=HABILIDADES DE COMBATE=-
 Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
 Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
