--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -387,18 +387,22 @@ Commands.NoConsole=\u8fd9\u4e2a\u6307\u4ee4\u4e0d\u652f\u6301\u5728\u63a7\u5236\
 Commands.Other=[[GREEN]]--\u5176\u4ed6\u547d\u4ee4--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
+Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- \u63a5\u53d7\u961f\u4f0d\u9080\u8bf7
 Commands.Party.Chat.Off=\u53ea\u5141\u8bb8\u961f\u4f0d\u804a\u5929 [[RED]]\u5173\u95ed
 Commands.Party.Chat.On=\u56e2\u961f\u804a\u5929 [[GREEN]]\u5f00\u542f
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--\u7ec4\u961f\u547d\u4ee4--
 Commands.Party.Invite.0=[[RED]]\u6ce8\u610f: [[GREEN]]\u4f60\u6536\u5230\u4e86\u4e00\u4e2a\u7ec4\u961f\u9080\u8bf7 {0} \u6765\u81ea {1}
-Commands.Party.Invite.1=[[YELLOW]]\u8f93\u5165 [[GREEN]]/party accept[[YELLOW]] \u6765\u63a5\u53d7\u9080\u8bf7
-Commands.Party.Invite=[[RED]]- \u53d1\u9001\u961f\u4f0d\u9080\u8bf7
-Commands.Party.Join=[[GRAY]]\u52a0\u5165\u961f\u4f0d: {0}
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
+Commands.Party.Invite=[[RED]]- Send party invite
+Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]\u4f60\u5df2\u88ab {0} \u8e22\u51fa!
 Commands.Party.Leave=[[RED]]\u4f60\u79bb\u5f00\u4e86\u8fd9\u652f\u961f\u4f0d
@@ -413,7 +417,7 @@ Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
@@ -454,8 +458,8 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party pass
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]] \u52a0\u5165\u4e86\u961f\u4f0d
-Party.InformedOnQuit={0} [[GREEN]] \u5df2\u7ecf\u79bb\u5f00\u4e86\u8fd9\u652f\u961f\u4f0d
+Party.InformedOnJoin={0} [[GREEN]]has joined your party
+Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]\u90a3\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684\u961f\u4f0d\u540d\u5b57.
 Party.IsLocked=[[RED]]\u8fd9\u4e2a\u961f\u4f0d\u5df2\u7ecf\u9501\u5b9a!
@@ -466,6 +470,7 @@ Party.NotOwner=[[DARK_RED]]You are not the party leader.
 Party.Owner.New=[[GREEN]]{0} \u73b0\u5728\u662f\u65b0\u7684\u6d3e\u7cfb\u9886\u961f.
 Party.Owner.NotLeader=[[DARK_RED]]\u4f60\u5df2\u7ecf\u4e0d\u518d\u662f\u6d3e\u7cfb\u5185\u7684\u9886\u961f.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.None=[[RED]]This party is password protected.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.Password.Set=[[GREEN]]\u961f\u4f0d\u5bc6\u7801\u8bbe\u7f6e\u4e3a {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
@@ -474,15 +479,21 @@ Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]\u4f60\u4e0d\u80fd\u4f20\u9001\u5230\u6b7b\u4ea1\u7684\u73a9\u5bb6\u8eab\u8fb9
-Party.Teleport.Hurt=[[RED]]\u4f60\u5728\u8fc7\u53bb\u7684 {0} \u79d2\u5185\u88ab\u4f24\u5bb3\u4e14\u4e0d\u80fd\u8fdb\u884c.
+Party.Teleport.Hurt=[[RED]]\u4f60\u5df2\u7ecf\u5728 {0} \u79d2\u524d\u53d7\u4f24\u5e76\u4e14\u65e0\u6cd5\u4f20\u9001.
 Party.Teleport.Player=[[GREEN]]\u4f60\u5df2\u7ecf\u4f20\u9001\u5230 {0}.
 Party.Teleport.Self=[[RED]]\u4f60\u4e0d\u80fd\u4f20\u9001\u5230\u4f60\u81ea\u5df1\u90a3\u91cc!
 Party.Teleport.Target=[[GREEN]]{0} \u5df2\u7ecf\u4f20\u9001\u5230\u4f60\u8eab\u8fb9.
-Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
+Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
+Party.Join.Self=[[RED]]You can\'t join to yourself!
 Party.Unlocked=[[GRAY]]\u961f\u4f0d\u5df2\u89e3\u9501
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=ITEM
+Party.ShareMode.NoShare=NONE
+Party.ShareMode.Equal=EQUAL
+Party.ShareMode.Random=RANDOM
 Commands.XPGain.Acrobatics=\u6389\u843d
 Commands.XPGain.Archery=\u7a7a\u624b\u653b\u51fb\u602a\u7269
 Commands.XPGain.Axes=\u653b\u51fb\u602a\u7269
