--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -164,7 +164,7 @@ Mining.Blast.Radius.Increase=[[RED]]Navyseni radiusu vybuchu: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]V\u00fdbu\u0161n\u00e9 t\u011b\u017een\u00ed [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pou\u017eil [[RED]]V\u00fdbu\u0161n\u00e9 T\u011b\u017een\u00ed!
 Mining.Blast.Refresh=[[GREEN]]Dovednost [[YELLOW]]Dolovani vybuchem [[GREEN]]je nyni obnovena!
-Repair.AnvilPlaced.Spout1=[mcMMO] Anvil Placed
+Repair.AnvilPlaced.Spout1=[mcMMO] Kovadlina umistena
 Repair.AnvilPlaced.Spout2=Right click to repair!
 Repair.Effect.0=Opravovani
 Repair.Effect.1=Oprava zbroje a n\u00e1stroj\u016f
@@ -237,7 +237,7 @@ Swords.Skills.SS.On=[[GREEN]]**HROZIVY UTOK BYL AKTIVOVAN**
 Swords.Skills.SS.Refresh=[[GREEN]]Tvoje schopnost [[YELLOW]]Serrated Strikes [[GREEN]]je obnovena!
 Swords.Skills.SS.Other.Off=[[RED]]Hrozivy utok[[GREEN]] byl deaktivovan [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] pouzil [[RED]]Hrozivy utok!
-Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
+Swords.Skillup=[[YELLOW]]Dovednost  mece byla navysena o {0}. Celkem ({1})
 Swords.SS.Length=[[RED]]D\u00e9lka Hroziv\u00e9ho \u00datoku: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Ekologicky informovane
 Taming.Ability.Bonus.1=Vlci, vyhn\u011bte se nebezpe\u010d\u00ed
@@ -387,18 +387,22 @@ Commands.NoConsole=Tento prikaz nepodporuje pouziti z konzole.
 Commands.Other=[[GREEN]]--OSTATNI PRIKAZY--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
+Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- Potvrdit pozvanku do party
 Commands.Party.Chat.Off=Chat jenom pro partu [[RED]]Vypnuty
 Commands.Party.Chat.On=Party chat [[RED]]Off
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--P\u0158\u00cdKAZY PARTY--
 Commands.Party.Invite.0=[[RED]]VAROVANI: [[GREEN]]Obdrzel jsi pozvanku do party {0} od {1}
-Commands.Party.Invite.1=[[YELLOW]]Napis [[GREEN]]/party accept[[YELLOW]] pro potvrzeni pozvanky
-Commands.Party.Invite=[[RED]]- Poslat pozv\u00e1nku do party
-Commands.Party.Join=[[GRAY]]Pripojen do party: {0}
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
+Commands.Party.Invite=[[RED]]- Send party invite
+Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Byl jsi vyhozen z party {0}!
 Commands.Party.Leave=[[RED]]Opustil jsi party
@@ -413,7 +417,7 @@ Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
@@ -421,7 +425,7 @@ Commands.ptp.RequestExpired=[[RED]]Party teleport request has expired!
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Rebricek [[YELLOW]]Celkovych levelu--
 Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]CELKOVY LEVEL: [[GREEN]]{0}
-Commands.Reset.All=[[GREEN]]All of your skill levels have been reset successfully.
+Commands.Reset.All=[[GREEN]] Vsechny vase dovednosti byli byli uspesne resetov\u00e1ny.
 Commands.Reset.Single=[[GREEN]]Your {0} skill level has been reset successfully.
 Commands.Reset=[[RED]]Reset a skill\'s level to 0
 Commands.Skill.Invalid=[[RED]]Neplatny nazev dovednosti!
@@ -454,8 +458,8 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party pass
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]] se p\u0159ipojil k va\u0161\u00ed skupin\u011b
-Party.InformedOnQuit={0} [[GREEN]] opustil party
+Party.InformedOnJoin={0} [[GREEN]]has joined your party
+Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Toto nen\u00ed mo\u017en\u00e9 jm\u00e9no pro partu.
 Party.IsLocked=[[RED]]Tahla parta je ji\u017e uzamknuta!
@@ -466,23 +470,30 @@ Party.NotOwner=[[DARK_RED]]You are not the party leader.
 Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.None=[[RED]]This party is password protected.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Set=[[GREEN]]Heslo do party nastaveno na {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Tohle neni platny hrac.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Nemuzes se teleportovat k mrtvemu hraci.
-Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Hurt=[[RED]]Byl jsi zasa\u017een p\u0159ed {0} sekundami a nem\u016f\u017ee\u0161 se teleportovat.
 Party.Teleport.Player=[[GREEN]]Byl jsi teleportovan k {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} se k tobe teleportoval.
-Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
+Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
+Party.Join.Self=[[RED]]You can\'t join to yourself!
 Party.Unlocked=[[GRAY]]Party je odemknuta
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=ITEM
+Party.ShareMode.NoShare=NONE
+Party.ShareMode.Equal=EQUAL
+Party.ShareMode.Random=RANDOM
 Commands.XPGain.Acrobatics=Padani
 Commands.XPGain.Archery=Zabijen\u00ed monster.
 Commands.XPGain.Axes=Utoceni na monstra
@@ -543,9 +554,9 @@ Stats.Header.Combat=[[GOLD]]-=BOJOVE DOVEDNOSTI=-
 Stats.Header.Gathering=[[GOLD]]-=SHROMAZDOVACI DOVEDNOSTI=-
 Stats.Header.Misc=Ostatni schopnosti
 Stats.Own.Stats=[[GREEN]][mcMMO] Statistiky
-Perks.xp.name=Experience
-Perks.xp.desc=Receive {0}x XP.
-Perks.lucky.name=Luck
+Perks.xp.name=Zku\u0161enost
+Perks.xp.desc=Obdrzene {0}x Zkusenosti
+Perks.lucky.name=\u0160test\u00ed
 Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
 Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
 Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
