--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -130,7 +130,7 @@ Mining.Ability.Locked.0=GESPERRT bis Skill {0}+  (Z\u00fcndstoff)
 Mining.Ability.Locked.1=GESPERRT bis Skill {0}+  (Sprengmeister)
 Mining.Ability.Locked.2=GESPERRT bis Skill {0}+  (Explosions-Experte)
 Mining.Ability.Lower=[[GRAY]]**Du senkst deine SPITZHACKE**
-Mining.Ability.Ready=[[GREEN]]**DU Z\u00dcCKST DEINE SPITZHACKE**
+Mining.Ability.Ready=[[GREEN]]**Deine SPITZHACKE ist bereit**
 Mining.Effect.0=Super-Brecher (F\u00e4higkeit)
 Mining.Effect.1=Speed+, Dreifach-Drop Chance
 Mining.Effect.2=Doppel Drops
@@ -206,7 +206,7 @@ Repair.Skillup=[[YELLOW]]Reparatur Skill um {0} gestiegen. Gesamt ({1})
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AS Verminderungs Chance: [[YELLOW]]{0}%
 Repair.Arcane.Chance.Success=[[GRAY]]AS Erfolgs-Rate: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Zauber-Wert des Gegenstands vermindert.
-Repair.Arcane.Fail=[[RED]]Die geheimnisvolle Kraft hat den Gegenstand dauerhaft verlassen.
+Repair.Arcane.Fail=[[RED]]Der Gegenstands wurde entzaubert.
 Repair.Arcane.Lost=[[RED]]Du hast nicht gen\u00fcgend Skill um Verzauberungen zu erhalten.
 Repair.Arcane.Perfect=[[GREEN]]Du hast den Zauber-Wert des Gegenstands erhalten.
 Repair.Arcane.Rank=[[RED]]Arkanes Schmieden Rang: [[YELLOW]]{0}/4
@@ -387,18 +387,22 @@ Commands.NoConsole=Dieser Command wird nicht per Console unterst\u00fctzt.
 Commands.Other=[[GREEN]]--ANDERE COMMANDS--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
+Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- Gruppen-Einladung akzeptieren
 Commands.Party.Chat.Off=Gruppen-Chat only [[RED]]deaktiviert
 Commands.Party.Chat.On=Gruppen-Chat only [[GREEN]]aktiviert
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--GRUPPEN COMMANDS--
 Commands.Party.Invite.0=[[RED]]INFO: [[GREEN]]Du hast eine Gruppen-Einladung f\u00fcr {0} von {1} bekommen
-Commands.Party.Invite.1=[[YELLOW]]Schreibe [[GREEN]]/party accept[[YELLOW]] um die Einladung zu genehmingen
-Commands.Party.Invite=[[RED]]- Gruppen-Einladung versenden
-Commands.Party.Join=[[GRAY]]Beigetretene Gruppe: {0}
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
+Commands.Party.Invite=[[RED]]- Send party invite
+Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]Du wurdest von folgender Gruppe gekickt: {0}!
 Commands.Party.Leave=[[RED]]Du hast diese Gruppe verlassen
@@ -413,7 +417,7 @@ Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
@@ -454,8 +458,8 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party pass
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]] ist der Gruppe beigetreten
-Party.InformedOnQuit={0} [[GREEN]] hat die Gruppe verlassen
+Party.InformedOnJoin={0} [[GREEN]]has joined your party
+Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Dies ist kein g\u00fcltiger Gruppen-Name.
 Party.IsLocked=[[RED]]Diese Gruppe ist bereits gesperrt!
@@ -466,23 +470,30 @@ Party.NotOwner=[[DARK_RED]]Du bist nicht der Gruppenleiter
 Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.None=[[RED]]This party is password protected.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Set=[[GREEN]]Gruppen-Password ge\u00e4ndert zu: {0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Dies ist kein g\u00fcltiger Spieler.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]Du kannst dich nicht zu toten Spielern teleportieren
-Party.Teleport.Hurt=[[RED]]Du wurdest in den letzten {0} Sekunden verletzt und kannst deshalb nicht teleportieren.
+Party.Teleport.Hurt=[[RED]]Du wurdest in den letzten {0} Sekunden verletzt und kannst dich nicht teleportieren.
 Party.Teleport.Player=[[GREEN]]Du wurdest zu {0} teleportiert.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} hat sich zu dir teleportiert.
-Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
+Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
+Party.Join.Self=[[RED]]You can\'t join to yourself!
 Party.Unlocked=[[AQUA]]Gruppe entsperrt
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=ITEM
+Party.ShareMode.NoShare=NONE
+Party.ShareMode.Equal=EQUAL
+Party.ShareMode.Random=RANDOM
 Commands.XPGain.Acrobatics=Fallen
 Commands.XPGain.Archery=Monster angreifen
 Commands.XPGain.Axes=Monster angreifen
@@ -560,7 +571,7 @@ Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]Du hast [[BLUE]]{0}[[DARK_
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
 Spout.Donate=[[YELLOW]][mcMMO] Donate!
-Spout.LevelUp.1=[[GREEN]]Level Up!
+Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
 Spout.Menu.ExitButton=EXIT
