--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -387,18 +387,22 @@ Commands.NoConsole=Este comando no es soportado desde la consola.
 Commands.Other=[[GREEN]]--OTROS COMANDOS--
 Commands.Party.Header=[[RED]]-----[][[GREEN]]PARTY[[RED]][]-----
 Commands.Party.Status=[[DARK_GRAY]]NAME: [[WHITE]]{0} {1}
-Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE: [[GRAY]]ITEM [[DARK_AQUA]]({0}) [[DARK_GRAY]]|| [[GRAY]]EXP [[DARK_AQUA]]({1})
+Commands.Party.ShareMode=[[DARK_GRAY]]SHARE MODE:
+Commands.Party.ItemShare=[[GRAY]]ITEM [[DARK_AQUA]]({0})
+Commands.Party.ExpShare=[[GRAY]]EXP [[DARK_AQUA]]({0})
+Commands.Party.MembersNear=[[DARK_GRAY]]NEAR YOU [[DARK_AQUA]]{0}[[DARK_GRAY]]/[[DARK_AQUA]]{1}
 Commands.Party.Accept=[[RED]]- Aceptar invitaci\u00f3n al grupo
 Commands.Party.Chat.Off=S\u00f3lo chat de grupo [[RED]]desactivado
 Commands.Party.Chat.On=S\u00f3lo chat de grupo [[RED]]activado
 Commands.Party.Chat.Prefix=[[GREEN]]([[WHITE]]{0}[[GREEN]])
 Commands.Party.Commands=[[GREEN]]--COMANDOS DEL GRUPO--
 Commands.Party.Invite.0=[[RED]]ATENCI\u00d3N: [[GREEN]]Fuiste invitado al grupo {0} por {1}
-Commands.Party.Invite.1=[[YELLOW]]Ingresa [[GREEN]]/party accept[[YELLOW]] para aceptar la invitaci\u00f3n
-Commands.Party.Invite=[[RED]]- Enviar invitaci\u00f3n al grupo
-Commands.Party.Join=[[GRAY]]Se uni\u00f3 al grupo: {0}
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/party accept[[YELLOW]] to accept the invite
+Commands.Party.Invite=[[RED]]- Send party invite
+Commands.Party.Join=[[GRAY]]Joined Party: {0}
 Commands.Party.Create=[[GRAY]]Created Party: {0}
 Commands.Party.Rename=[[GRAY]]Party name changed to: [[WHITE]]{0}
+Commands.Party.SetSharing=[[GRAY]]Party {0} sharing set to: [[DARK_AQUA]]{1}
 Commands.Party.AlreadyExists=[[DARK_RED]]Party {0} already exists!
 Commands.Party.Kick=[[RED]]\u00a1Fuiste expulsado del grupo {0}!
 Commands.Party.Leave=[[RED]]Abandonaste el grupo
@@ -413,7 +417,7 @@ Commands.Party2=[[RED]]- Join a players party
 Commands.ptp.Enabled=Party teleporting [[GREEN]]enabled
 Commands.ptp.Disabled=Party teleporting [[RED]]disabled
 Commands.ptp.NoRequests=[[RED]]You have no teleport requests at this time
-Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you. 
+Commands.ptp.Request1=[[YELLOW]]{0} [[GREEN]]has requested to teleport to you.
 Commands.ptp.Request2=[[GREEN]]To teleport, type [[YELLOW]]/ptp accept. [[GREEN]]Request expires in [[RED]]{0} [[GREEN]]seconds.
 Commands.ptp.AcceptAny.Enabled=Party teleport request confirmation [[GREEN]]enabled
 Commands.ptp.AcceptAny.Disabled=Party teleport request confirmation [[RED]]disabled
@@ -454,8 +458,8 @@ Party.Help.5=[[RED]]To password protect your party, use [[DARK_AQUA]]/party pass
 Party.Help.6=[[RED]]To kick a player from your party, use [[DARK_AQUA]]/party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use [[DARK_AQUA]]/party owner <player>
 Party.Help.8=[[RED]]To disband your party, use [[DARK_AQUA]]/party disband
-Party.InformedOnJoin={0} [[GREEN]] ha entrado a tu fiesta
-Party.InformedOnQuit={0} [[GREEN]]abandon\u00f3 el grupo
+Party.InformedOnJoin={0} [[GREEN]]has joined your party
+Party.InformedOnQuit={0} [[GREEN]]has left your party
 Party.InformedOnNameChange=[[GOLD]]{0} [[GREEN]]has set the party name to [[WHITE]]{1}
 Party.InvalidName=[[DARK_RED]]Ese no es un nombre de grupo v\u00e1lido.
 Party.IsLocked=[[RED]]\u00a1Este grupo ya est\u00e1 bloqueado!
@@ -466,23 +470,30 @@ Party.NotOwner=[[DARK_RED]]You are not the party leader.
 Party.Owner.New=[[GREEN]]{0} is the new party leader.
 Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
 Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.None=[[RED]]This party is password protected.
 Party.Password.Incorrect=[[RED]]Party password is incorrect.
-Party.Password.Set=[[GREEN]]Party password set to {0}
+Party.Password.Set=[[GREEN]]Contrase\u00f1a del grupo establecida: [[RED]]{0}
 Party.Password.Removed=[[GREEN]]Party password has been cleared.
 Party.Player.Invalid=[[RED]]Ese no es un jugador v\u00e1lido.
 Party.NotOnline=[[DARK_RED]]{0} is not online!
 Party.Player.InSameParty=[[RED]]{0} already is in your party!
 Party.PlayerNotInParty=[[DARK_RED]]{0} is not in a party
 Party.Teleport.Dead=[[RED]]No te puedes teletransportar a un jugador muerto.
-Party.Teleport.Hurt=[[RED]]You\'\'ve been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Hurt=[[RED]]Fuiste herido en los \u00faltimos {0} segundos y no te puedes teletransportar.
 Party.Teleport.Player=[[GREEN]]Te teletransportaste a {0}.
 Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} se teletransport\u00f3 a ti.
-Party.Teleport.Disabled=[[RED]]{0} doesn't allow party teleportation.
+Party.Teleport.Disabled=[[RED]]{0} doesn\'t allow party teleportation.
+Party.Join.Self=[[RED]]You can\'t join to yourself!
 Party.Unlocked=[[GRAY]]El grupo est\u00e1 desbloqueado
 Party.Disband=[[GRAY]]The party has been disbanded
 Party.Status.Locked=[[DARK_RED]](INVITE-ONLY)
 Party.Status.Unlocked=[[DARK_GREEN]](OPEN)
+Party.ShareType.Exp=EXP
+Party.ShareType.Item=ITEM
+Party.ShareMode.NoShare=NONE
+Party.ShareMode.Equal=EQUAL
+Party.ShareMode.Random=RANDOM
 Commands.XPGain.Acrobatics=Cayendo
 Commands.XPGain.Archery=Atacando a Monstruos
 Commands.XPGain.Axes=Atacando a Monstruos
